--- a/.gitignore
+++ b/.gitignore
@@ -27,10 +27,12 @@ yarn-error.log*
 
 # local env files
 .env*.local
+.env.**
+.env
 
 # vercel
 .vercel
 
 # typescript
 *.tsbuildinfo
-next-env.d.ts
+# next-env.d.ts
