--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.5.3",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "totp-generator": "^1.0.0"
   },
   "devDependencies": {
     "@types/node": "^20",
