--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,9 @@
 DATABASE_URL="file:./dev.db"
 NEXTAUTH_SECRET="your-nextauth-secret"
-NEXTAUTH_URL="http://localhost:3000"
+NEXTAUTH_URL="http://localhost:3030"
+AUTH_TRUST_HOST=http://localhost:3030
 GITHUB_ID="your-github-id"
 GITHUB_SECRET="your-github-secret"
 GOOGLE_CLIENT_ID="your-google-client-id"
 GOOGLE_CLIENT_SECRET="your-google-client-secret"
+
