run differ with bash

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
+    "shadcn-differ": "^1.0.2",
     "tailwind-merge": "^2.5.3",
     "tailwindcss-animate": "^1.0.7",
     "totp-generator": "^1.0.0"
